Fix extra pixels of Card divider when 'isCompact' and 'isOverflowed' are enabled

--- a/labsystem/scss/components/_lab-card.scss
+++ b/labsystem/scss/components/_lab-card.scss
@@ -1,6 +1,6 @@
 @use "sass:map";
 
-$card-default-padding: $spacing-5;
+$card-default-padding: $spacing-4;
 $card-compact-padding: $spacing-3 $spacing-4;
 
 // Layout
